syntax = "proto3";
package user.v1;
option go_package="user/v1;userv1";

message User {
  uint64 uid = 1;
  string username = 2;
  string password = 3;
  string nickname = 4;
  string user_agent = 5;
}

message UserInfo {
  string nickname = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc GetUserInfoByUsername(GetUserInfoByUsernameRequest) returns (GetUserInfoByUsernameResponse);
}

message CreateUserRequest {
  User user = 1;
  string code = 2;
}

message CreateUserResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message GetUserInfoByUsernameRequest {
  string username = 1;
}

message GetUserInfoByUsernameResponse {
  User user = 1;
}

message UpdateUserRequest {
  UserInfo user_info = 1;
}

message UpdateUserResponse {
}


